@@ -33,3 +33,12 @@ function dismissLog() {
 
 }
 */
+
+const d = new Date();
+let hours = d.getUTCHours();
+
+if (hours < 12) {
+    document.getElementById("header").innerHTML = "Good Morning and Welcome Back!"
+} else {
+    document.getElementById("header").innerHTML = "Good Afternoon and Welcome Back!"
+}
