@@ -5,9 +5,7 @@
     <link rel="stylesheet" type = "text/css" href="CSS/cssMain.css">
     <body class = "flexBody">
         <article class = "flexArticle">
-            <h1 class="centerTxt">
-                Welcome to Peter's Webpage!
-            </h1>
+            <h1 id= "header" class="centerTxt"></h1>
             <p class="centerTxt">
                 Mainly used for Computer Science Showcasing
             </p>
